# misc_Talkr

./: README.md  create-project-files.sh
doc/examples/: client.c  server.c
src/: CMakeLists.txt
src/jalon01/: client.c  server.c
src/jalon02/: CMakeLists.txt  client.c  client.h  common.c  common.h  server.c  server.h
src/jalon03/: CMakeLists.txt  client.c  common.h  server.c  server.h
src/jalon04/: CMakeLists.txt  client.c  client.h  common.c  common.h  server.c  server.h
src/jalon05/: CMakeLists.txt  client.c  client.h  common.c  common.h  server.c  server.h
